auto-test/tests/chapter_18/valid/extra_credit/other_features/label_tag_member_namespace.c


int main(void) {
    struct x {
        int x;
    };
    struct x x = {10};
    goto x;
    return 0;
x:
    return x.x; 
}