auto-test/tests/chapter_18/invalid_types/scalar_required/cast_to_struct.c
struct s {
  int a;
};

struct s x;





int main(void) { (struct s) x; }